--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
                 <br>
                 <div class="h2">Research Areas</div>
 <ul>
-<li>Theory and computer simulations of soft active matter</li>
-<li>Degradation of polymer networks</li>
+<li>Modeling soft active materials</li>
+<li>Understanding degradation of polymers </li>
 <li>Computational design of biomimetic materials</li>
 <li>Pattern formation in synthetic and biological systems</li>
 </ul>
 
 <ul>
- <a href=projects.html> <strong> Ongoing projects </strong></a>
+ <a href=projects.html> <strong> ONGOING PROJECTS </strong></a>
 
                 </ul>
 
