--- a/news.html
+++ b/news.html
@@ -82,15 +82,31 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>January 2022</small></h1>
+
+<strong> Congratulations to Vaibhav Palkar on his recent publication: <p> V. Palkar, O. Kuksenok <strong> <a href= https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570> "Controlling Degradation and Erosion of Polymer Networks: Insights from Mesoscale Modeling"</a></strong>, </p> <em> J. Phys. Chem. B </em> 126, 1, 336–346 (2022) </p>
+<br>
+</p>
+</strong> 
+       <a href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570><img src="images/jpcb.png" height="520"</a>                
+<h1 class="page-header"><small>August 2021</small></h1></a></strong>
+
+ <p>Three group members presented their work at at LAMMPS Virtual Workshop and Symposium 2021:
+    <br>
+    <strong>Devanshu Thakar</strong> (lighting talk), <strong>Vaibhav Palkar</strong> (contributed talk), and <strong>Chandan Choudhury</strong> (lighting talk). 
+<p>
+All three recorded talks are available at 
+   <strong><a href= https://www.lammps.org/workshops/Aug21/> https://www.lammps.org/workshops/Aug21/</a></strong>
+<p>
 
 <h1 class="page-header"><small>July 2021</small></h1>
 
  <p>Raleigh Wunderlich, Janelle Arnold, and Usmaan Al-Shehab are presenting their work at 8th Annual Summer Undergraduate Research Symposium
 <p>
-                <a href= images/photos/Raleigh2021.jpg> <img src="images/photos/Raleigh2021.jpg" height="350"></a>&nbsp;
-                <a href= images/photos/Janelle.jpg><img src="images/photos/Janelle.jpg" height="350"></p></a>
+                <a href= images/photos/Raleigh2021.jpg> <img src="images/photos/Raleigh2021.jpg" height="295"></a>&nbsp;
+                <a href= images/photos/Janelle.jpg><img src="images/photos/Janelle.jpg" height="295"></p></a>
                 <p>
-                <a href= images/photos/Usmaan2021.jpg> <img src="images/photos/Usmaan2021.jpg" height="307"></p> </a>
+                <a href= images/photos/Usmaan2021.jpg> <img src="images/photos/Usmaan2021.jpg" height="260"></p> </a>
  <p>______________________________</p>
 
 
