--- a/projects.html
+++ b/projects.html
@@ -80,6 +80,26 @@
             <div class="col-lg-12">
                 <h1 class="page-header">Projects</h1>
 
+        <!-- PROJECT 1-Degradation -->
+                        <div class="item">
+                            <div class="small small_enlargeable">
+                        <img src=images/Degrade.png>
+                    </div>
+
+                    <div class="description">
+                        <p class="bigtitle">Mesoscale Modeling of Degradation and Erosion  </p>
+                            <p class="title">Understanding and controlling the degradation of polymer networks plays a vital role in a variety of applications. Degradable hydrogels find their use in controlled drugs delivery, wound dressings design, as cell culture platforms, and as photolithographic materials.  We are developing Dissipative Particle Dynamics framework that captures erosion, reverse gelation, and elasticity of controllably degrading polymer networks.  In addition, we are also developing mesoscale approach to model chain scission during controlled degradation of thermoplastics to optimize recycling and reuse. </p>
+                                <p class="subtitle"><Strong> Vaibhav Palkar, Eric Miller, Devanshu Thakar </a></Strong></p>
+                                                <p>Related publications :
+<p> V. Palkar, O. Kuksenok <strong> <a href= https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570> "Controlling Degradation and Erosion of Polymer Networks: Insights from Mesoscale Modeling"</a></strong>, <em> J. Phys. Chem. B </em> 126, 1, 336–346 (2022) </p>
+<br>
+                                                <p>Palkar, V., Choudhury, C. K., Kuksenok, O. <strong><a href= https://www.cambridge.org/core/journals/mrs-advances/article/development-of-dissipative-particle-dynamics-framework-for-modeling-hydrogels-with-degradable-bonds/CDC9885D7BEEAD54B908870669A68923
+                                                >"Development of Dissipative Particle Dynamics framework for modeling hydrogels with degradable bonds”</a></strong>. <em>MRS Advances (2020)</em> </p>
+                                                Choudhury, C. K.,  Palkar, V., Kuksenok, O. <strong><a href= https://pubs.acs.org/doi/pdf/10.1021/acs.langmuir.9b03486
+>"Computational design of nanostructured soft interfaces: focus on shape changes and spreading of cubic nanogels”</a></strong>. <em>Langmuir (2020) 36, 25, 7109–7123
+
+                                            </div>
+                                </div>
        <!-- PROJECT 3 -YAO -->
                         <div class="item">
                             <div class="small small_enlargeable">
@@ -122,25 +142,6 @@
                                             </div>
                                 </div>
 
-        <!-- PROJECT 1-Degradation -->
-                        <div class="item">
-                            <div class="small small_enlargeable">
-                        <img src=images/Degrade.png>
-                    </div>
-
-                    <div class="description">
-                        <p class="bigtitle">Mesoscale Modeling of Degradation and Erosion  </p>
-                            <p class="title">Understanding and controlling the degradation of polymer networks plays a vital role in a variety of applications. Degradable hydrogels find their use in controlled drugs delivery, wound dressings design, as cell culture platforms, and as photolithographic materials.  We are developing Dissipative Particle Dynamics framework that captures erosion, reverse gelation, and elasticity of controllably degrading polymer networks.  In addition, we are also developing mesoscale approach to model chain scission during controlled degradation of thermoplastics to optimize recycling and reuse. </p>
-                                <p class="subtitle"><Strong> Vaibhav Palkar, Eric Miller </a></Strong></p>
-                                                <p>Related publications (modeling hydrogels):
-
-                                                <p>Palkar, V., Choudhury, C. K., Kuksenok, O. <strong><a href= https://www.cambridge.org/core/journals/mrs-advances/article/development-of-dissipative-particle-dynamics-framework-for-modeling-hydrogels-with-degradable-bonds/CDC9885D7BEEAD54B908870669A68923
-                                                >"Development of Dissipative Particle Dynamics framework for modeling hydrogels with degradable bonds”</a></strong>. <em>MRS Advances (2020)</em> </p>
-                                                Choudhury, C. K.,  Palkar, V., Kuksenok, O. <strong><a href= https://pubs.acs.org/doi/pdf/10.1021/acs.langmuir.9b03486
->"Computational design of nanostructured soft interfaces: focus on shape changes and spreading of cubic nanogels”</a></strong>. <em>Langmuir (2020) 36, 25, 7109–7123
-
-                                            </div>
-                                </div>
 
         <!-- PROJECT 4 -MBB -->
                         <div class="item">
