--- a/pubs.html
+++ b/pubs.html
@@ -80,15 +80,21 @@
             <div class="col-lg-12">
                 <h1 class="page-header">Publications
                 </h1>
+<!-- Image -->
+                <A href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570><img src="images/jpcb.png" class="illustration"></A>                 
+<p> 93. V. Palkar, O. Kuksenok <strong> <a href= https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570> "Controlling Degradation and Erosion of Polymer Networks: Insights from Mesoscale Modeling"</a></strong>,  <em> J. Phys. Chem. B </em> 126, 1, 336–346 (2022) </p>
 
-<p> 92. X. Wang, J. Bowman, S. Tu, D. Nykypanchuk, O. Kuksenok, and S. Minko <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00872> "Polyethylene Glycol Crowder’s Effect on Enzyme Aggregation, Thermal Stability, and Residual Catalytic Activity"</a></strong>,  <em> Langmuir (2021) </em> </p>
+<p> 92. X. Wang, J. Bowman, S. Tu, D. Nykypanchuk, O. Kuksenok, and S. Minko <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00872> "Polyethylene Glycol Crowder’s Effect on Enzyme Aggregation, Thermal Stability, and Residual Catalytic Activity"</a></strong>,  <em> Langmuir </em> 37, 28, 8474–8485 (2021) </p>
 
 <p> 91. Xiong, Y., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138> "Mechanical Adaptability of Patterns in Constrained Hydrogel Membranes"</a></strong>,  <em> Langmuir (2021) </em> </p>
-
+    <A href=https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603><img src="images/FrontCoverArt.png" class="illustration"></A> 
+    <A href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138><img src="images/Patterns.png" class="illustration"></A> 
 <p> 90. Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> Journal of Physical Chemistry B (2020) </em> </p>
 
 <p> 89. Wei, L, Caliskan, T.D., Tu, S., Choudhury, C.K, Kuksenok, O, Luzinov, I. <strong><a href= https://pubs.acs.org/doi/abs/10.1021/acsami.0c08649 > "Highly Oil-Repellent Thermoplastic Boundaries via Surface Delivery of CF3 Groups by Molecular Bottlebrush Additives"</a></strong>, <em>ACS Applied Materials & Interfaces (2020) </em> 12 (34), 38626-38637 </p>
+                <A href=https://pubs.rsc.org/en/content/articlelanding/2018/sm/c8sm01207e#!divAbstract><img src="images/BackCover.jpg" class="illustration"></A> 
 
+                <A href=https://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138><img src="images/accacs_v007i012-4.jpg" class="illustration"></A> 
 <p>88.  Palkar, V., Choudhury, C. K., Kuksenok, O. <strong><a href= https://www.cambridge.org/core/journals/mrs-advances/article/development-of-dissipative-particle-dynamics-framework-for-modeling-hydrogels-with-degradable-bonds/CDC9885D7BEEAD54B908870669A68923
 >"Development of Dissipative Particle Dynamics framework for modeling hydrogels with degradable bonds”</a></strong>. <em>MRS Advances (2020)</em>, 5(17), 927-934 </p>
 
@@ -103,8 +109,8 @@
 <p>85. Tu, S., Choudhury, C. K., Luzinov, I., Kuksenok., O. <strong><a href= https://doi.org/10.1016/j.cossms.2019.01.003
 >"Recent advances towards applications of molecular bottlebrushes and their Conjugates”</a></strong>. <em> Current Opinion in Solid State and Materials Science </em> , 23 (1), 50-61 (2019)</p>
 </p>
-<!-- Image
-                <A href=http://onlinelibrary.wiley.com/doi/10.1002/adfm.201203876/abstract><img src="images/Ref60.jpg" class="illustration"></A> -->
+<!-- Image -->
+                <A href=http://onlinelibrary.wiley.com/doi/10.1002/adfm.201203876/abstract><img src="images/Ref60.jpg" class="illustration"></A> 
 <p>84. Savchak, O., Morrison, T., Kornev, K.G. and Kuksenok, O. <strong><a href=https://pubs.rsc.org/en/content/articlelanding/2018/sm/c8sm01207e#!divAbstract>Controlling deformations of gel-based composites by electromagnetic signals within the GHz frequency range.</a></strong> <em>Soft matter</em>, 14(43), pp.8698-8708 (2018)</p>
 
 <p>83. Schiller, U.D. and Kuksenok, O., 2018. <strong><a href=https://onlinelibrary.wiley.com/doi/10.1002/9781119518068.ch1> "Lattice-Boltzmann Modelling of Multicomponent Systems: An Introduction."</strong> </a> <em>Reviews in Computational Chemistry</em>, 31, p.1. John Wiley & Sons (2018)</p>
@@ -127,9 +133,9 @@
 >"Harnessing Self‐Healing Vesicles to Pick Up, Transport, and Drop Off Janus Particles"</a></strong> Self‐Assembly: From Surfactants to Nanoparticles, John Wiley & Sons, Inc. (2018) </p>
 
 </p>
-<!-- Image
 
-                <A href=http://onlinelibrary.wiley.com/doi/10.1002/adfm.201203876/abstract><img src="images/Ref60.jpg" class="illustration"></A> -->
+
+<A href=https://pubs.rsc.org/en/content/articlelanding/2016/mh/c5mh00212e><img src="images/MH.png" class="illustration"></A> 
 <p>76. Yadavalli N.S., Borodinov, N., Choudhury, C.K., Quiñones-Ruiz, T., Laradji, A.M., Tu, S., Lednev, I.K., Kuksenok, O., Luzinov, I., and S. Minko. <strong><a href=https://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138>"Thermal Stabilization of Enzymes with Molecular Brushes"</a></strong> ACS Catalysis 7 (12), 8675-8684
 </p>
 
@@ -139,7 +145,7 @@
 
 <p>73. Yong, X., Snow, S.C., Kuksenok, O., Balazs, A.C., <strong>"Developing Hybrid Modeling Methods to Simulate Self-Assembly in Polymer Nanocomposites"</strong>, Self-Assembling Systems: Theory and Simulation, 20 (2016).</p>
 
-<p>72. Kuksenok. O., and Balazs, A.C., <strong>“Stimuli-responsive behavior of composites integrating thermo-responsive gels with photo-responsive fibers”</strong>, Mater. Horiz., DOI: 10.1039/C5MH00212E (2016)</p>
+<p>72. Kuksenok. O., and Balazs, A.C., <strong><a href=https://pubs.rsc.org/en/content/articlelanding/2016/mh/c5mh00212e>“Stimuli-responsive behavior of composites integrating thermo-responsive gels with photo-responsive fibers”</a></strong>, Materials Horizons, DOI: 10.1039/C5MH00212E (2016)</p>
 
 <p>71. Liu, Y., Yong, X., McFarlin IV, G.T., Kuksenok. O., Aizenberg, J., and Balazs, A.C., <strong>“Designing a gel–fiber composite to extract nanoparticles from solution,”</strong> Soft Matter, DOI: 10.1039/C5SM01719J (2015).</p>
 
@@ -189,9 +195,9 @@
 </p>
 <p>49. Yashin, V.V., Kuksenok, O., Dayal, P., and Balazs, A.C., “Mechano-chemical oscillations and waves in reactive gels,” Rep. Prog. Phys., 75, 066601 (2012)
 </p>
-<!-- Image
+<!-- Image -->
 
-                <a href=http://pubs.rsc.org/en/content/articlelanding/2011/sm/c0sm01007c#!divAbstract><img src="images/Ref48.png" class="illustration"></a> -->
+                <a href=http://pubs.rsc.org/en/content/articlelanding/2011/sm/c0sm01007c#!divAbstract><img src="images/Ref48.png" class="illustration"></a>
 <p>48. Chen, I.C., Kuksenok, O., Yashin, V.V., Balazs, A.C., and Van Vliet, K.J., <strong>“Mechanical Resuscitation of Chemical Oscillations in Belousov-Zhabotinsky Gels,”</strong> Adv. Funct. Mater. 22(12), 2535-2541, (2012)
 <p>47. Epstein, I.R., Vanag, V.K., Balazs, A.C., Kuksenok, O., Dayal, P., and Bhattacharya, A., “Chemical Oscillators in Structured Media,” Acc. Chem. Res., 45 (12), 2160-2168 (2012)
 </p>
