--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <img src=images/s3_i4.png width=150></a>&nbsp;&nbsp;<a href=https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e>
                     <img src=images/FrontCoverArt.png width=200></a></div>  -->
 
-<div class="illustration" style="width:34%;max-width:400px">
+<!--<div class="illustration" style="width:34%;max-width:400px">
                     <a href=https://reader.elsevier.com/reader/sd/pii/S1359028618301827?token=A9B7D8F652579780E5858E3B6669221E75DFE584A7D37A36DBD188EDD3CE1212A01CF51076D02D2690C5F7E0817756E1><img src=images/Picture1.png width=80></a>
                     <a href=https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603><img src=images/FrontCoverArt.png width=100></a><br><br>
                     <a href=https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138><img src=images/Patterns.png width=80></a>
@@ -100,10 +100,13 @@
 
               </a></div> 
 
-    <!-- Content
                 <h2>About the PI</h2> -->
+                
 
-                <p style="margin-top:20px;margin-right:30px">Dr. Kuksenok is an Associate Professor at the Materials Science and Engineering Department at Clemson University.  She  received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine. Dr. Kuksenok’s research interests and accomplishments span the following areas of materials science: elastodynamics of responsive polymer gels, dynamics of multi-component polymer blends, biomimetic and biological materials, pattern formation in non-equilibrium systems, complex fluids dynamics, and theory of heterogeneous liquid crystalline systems.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao><strong>More on Google Scholar </strong></a></em></p>
+                <p style="margin-top:20px;margin-right:410px">
+                <b>We focus on computational design of advanced polymer-based materials. Such materials include biomimetic materials, where the aim is to design fully syntetic materials with properties and functionalities inspired by nature. For the current updates, check our <a href=https://cecas.clemson.edu/kuksenoklab/news.html>News</a> page.</b>
+
+                <br></br> About the PI: Dr. Kuksenok is an Associate Professor and Director of Graduate Program at the Materials Science and Engineering Department at Clemson University.  She  received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine. Dr. Kuksenok’s research interests and accomplishments span the following areas: elastodynamics of responsive polymer gels, dynamics of multi-component polymer blends, biomimetic and biological materials, and pattern formation in non-equilibrium systems.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao><strong>More on Google Scholar </strong></a></em></p>
                 <br>
                 <div class="h2">Research Areas</div>
 <ul>
@@ -119,11 +122,18 @@
                 </ul>
 
 
-                                <div class="h2">Contact</div>
+<div class="h2"> PhD/MS Openings 2022/2023 !updated!</div>
 
-                <p>Phone: (864) 656-5956<br>
-Office: 299D Sirrine Hall<br>
-E-mail: okuksen at clemson dot edu</a></p>
+<p><strong>------------ PROSPECTIVE GRADUATE STUDENTS </strong> </p>
+<p><strong>PhD opening:</strong> Looking for a highly motivated student to join our group to pursue his/her/their PhD degree in Materials Science and Engineering. The research will focus on modeling microwave-triggered controlled fragmentation of conventional thermoplastics into macromolecular chains fragments. Functionalized nanosheets dispersed within the polyolefin materials will localize heating and trigger fragmentation upon application of short microwave pulses. A multiscale model integrating coarse-grained and continuum approaches will be developed. This project will be conducted in close collaboration with the concurrent experiments in Dr. Luzinov’s group. Model parameters will be based on the experimental data, and model predictions will be validated in the experiments. The long-term goal of the project is to design materials with properties of conventional thermoplastics but capable of end-of-life controlled deconstruction into reusable polymer chain fragments. <strong>Requirements:</strong> some prior programming experience (C/C++, python, COMSOL Multiphysics@, or related experience) is required. If interested please send your curriculum vitae and a cover letter detailing your previous programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>. The position is available immidiately, however the starting date is negotiable (Fall 2022,Spring/Summer/Fall 2023).
+<p><strong> ------------ PROSPECTIVE MASTER STUDENTS  </strong> </p>
+Looking for a highly motivated student to join our group to pursue his/her/their Master degree in Computational Materials Materials Science and Engineering. This position is available <b> immidiately (Fall 2022) </b>. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
+<br></br>
+<p><strong>------------ UNDERGRADUATE STUDENTS  </strong> </p>
+<p><strong>Undergraduate researchers:</strong>    We have several openings for Clemson undergraduate students to participate in research projects involving computational modeling available immidiately. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
+<br></br> 
+Last updated: Sep 5, 2022
+         
 
 <!--        <div class="h2">In the Press</div>
         <ul>
