--- a/news.html
+++ b/news.html
@@ -82,6 +82,28 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>August 2022</small></h1></a></strong>
+
+ <p>Congratulations to <strong>Vaibhav Palkar</strong>: his code <strong><em>"pair style srp/react"</em> is now included in <a href= https://docs.lammps.org/pair_srp.html#pair-style-srp-react-command> LAMMPS </a></strong>. <br> Vaibhav's name is also listed among the <strong>authors</strong>  who contributed new code or command to <strong>LAMMPS : <a href= https://www.lammps.org/authors.html> https://www.lammps.org/authors.html </a></strong>
+</strong> 
+<p>
+<h1 class="page-header"><small>June 2022</small></h1></a></strong>
+
+ <p>Congratulations to Sidong, Chandan, and Michaela on their recent publication: <strong><p> S Tu, CK Choudhury, M Giltner, I Luzinov, O Kuksenok <a href= https://www.mdpi.com/2073-4360/14/12/2339> "Mesoscale Modeling of Agglomeration of Molecular Bottlebrushes: Focus on Conformations and Clustering Criteria"</a></strong>, <em> Polymers </em> 14 (12), 2339 (2022) </p>
+</strong> 
+<p>
+
+<h1 class="page-header"><small>February 2022</small></h1></a></strong>
+
+ <p><strong>Sidong Tu</strong> had been awarded <strong>Kentwool Educational Fellowship</strong>. Congratulations Sidong!
+    <br>
+ <p><strong>Yao Xiong</strong> had been awarded <strong>David Jennings Memorial Fund Fellowship</strong>. Congratulations Yao!
+    <br>
+ <p><strong>Vaibhav Palkar</strong> had been awarded <strong>Bishop Annual Fellowship in Materials Science</strong>. Congratulations Vaibhav!
+    <br>
+    
+<p>
+
 <h1 class="page-header"><small>January 2022</small></h1>
 
 <strong> Congratulations to Vaibhav Palkar on his recent publication: <p> V. Palkar, O. Kuksenok <strong> <a href= https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570> "Controlling Degradation and Erosion of Polymer Networks: Insights from Mesoscale Modeling"</a></strong>, </p> <em> J. Phys. Chem. B </em> 126, 1, 336–346 (2022) </p>
