--- a/pubs.html
+++ b/pubs.html
@@ -82,6 +82,9 @@
                 </h1>
 <!-- Image -->
                 <A href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570><img src="images/jpcb.png" class="illustration"></A>                 
+
+<p> 94. S. Tu, C.K. Choudhury, M. Giltner, I. Luzinov, O. Kuksenok <strong><a href= https://www.mdpi.com/2073-4360/14/12/2339> "Mesoscale Modeling of Agglomeration of Molecular Bottlebrushes: Focus on Conformations and Clustering Criteria"</a></strong>, <em> Polymers </em> 14 (12), 2339 (2022) </p>
+</strong> 
 <p> 93. V. Palkar, O. Kuksenok <strong> <a href= https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570> "Controlling Degradation and Erosion of Polymer Networks: Insights from Mesoscale Modeling"</a></strong>,  <em> J. Phys. Chem. B </em> 126, 1, 336–346 (2022) </p>
 
 <p> 92. X. Wang, J. Bowman, S. Tu, D. Nykypanchuk, O. Kuksenok, and S. Minko <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00872> "Polyethylene Glycol Crowder’s Effect on Enzyme Aggregation, Thermal Stability, and Residual Catalytic Activity"</a></strong>,  <em> Langmuir </em> 37, 28, 8474–8485 (2021) </p>
