--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
                 <h1 class="page-header">Kuksenok Research Group<br><small>Computational Materials Design </small>
                 </h1>
-                 <a href=people.html><img src="group.jpg" style="max-width:1100px;width:64%"></a>
- 
+                 <a href=people.html><img src="group.jpg" style="max-width:600px;width:100%"></a>
+
 
 <!--                <div class="illustration" style="width:40%;max-width:400px">
                     <a href=https://reader.elsevier.com/reader/sd/pii/S1359028618301827?token=A9B7D8F652579780E5858E3B6669221E75DFE584A7D37A36DBD188EDD3CE1212A01CF51076D02D2690C5F7E0817756E1><img src=images/Picture1.png width=150></a>
@@ -98,12 +98,12 @@
                     <a href=https://pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?af=R><img src=images/s3_i4.png width=80>
                     <a href=https://pubs.rsc.org/en/content/articlepdf/2018/sm/c8sm01207e><img src=images/BackCoverGreen.jpg width=100>
 
-              </a></div> 
+              </a></div>
 
                 <h2>About the PI</h2> -->
-                
 
-                <p style="margin-top:20px;margin-right:410px">
+
+                <p style="margin-top:20px">
                 <b>We focus on computational design of advanced polymer-based materials. Such materials include biomimetic materials, where the aim is to design fully syntetic materials with properties and functionalities inspired by nature. For the current updates, check our <a href=https://cecas.clemson.edu/kuksenoklab/news.html>News</a> page.</b>
 
                 <br></br> About the PI: Dr. Kuksenok is an Associate Professor and Director of Graduate Program at the Materials Science and Engineering Department at Clemson University.  She  received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine. Dr. Kuksenok’s research interests and accomplishments span the following areas: elastodynamics of responsive polymer gels, dynamics of multi-component polymer blends, biomimetic and biological materials, and pattern formation in non-equilibrium systems.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao><strong>More on Google Scholar </strong></a></em></p>
@@ -131,9 +131,9 @@ Looking for a highly motivated student to join our group to pursue his/her/their
 <br></br>
 <p><strong>------------ UNDERGRADUATE STUDENTS  </strong> </p>
 <p><strong>Undergraduate researchers:</strong>    We have several openings for Clemson undergraduate students to participate in research projects involving computational modeling available immidiately. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
-<br></br> 
+<br></br>
 Last updated: Sep 5, 2022
-         
+
 
 <!--        <div class="h2">In the Press</div>
         <ul>
