--- a/index.html
+++ b/index.html
@@ -121,18 +121,25 @@
 
                 </ul>
 
+<p>&nbsp;</p>
 
-<div class="h2"> PhD/MS Openings 2022/2023 !updated!</div>
+<div class="h2"> PhD/MS Openings 2022/2023 <small style="background-color:#eee; padding:3px;"><em>Updated!</em></small></div>
+<p>&nbsp;</p>
+<p><strong>PROSPECTIVE GRADUATE STUDENTS </strong> </p>
+<p><strong>PhD opening:</strong> Looking for a highly motivated student to join our group to pursue his/her/their PhD degree in Materials Science and Engineering. The research will focus on modeling microwave-triggered controlled fragmentation of conventional thermoplastics into macromolecular chains fragments. Functionalized nanosheets dispersed within the polyolefin materials will localize heating and trigger fragmentation upon application of short microwave pulses. A multiscale model integrating coarse-grained and continuum approaches will be developed. This project will be conducted in close collaboration with concurrent experiments in Dr. Luzinov’s group. Model parameters will be based on the experimental data, and model predictions will be validated in the experiments. The long-term goal of the project is to design materials with properties of conventional thermoplastics but capable of end-of-life controlled deconstruction into reusable polymer chain fragments.</p> <p><strong>Requirements:</strong> some prior programming experience (C/C++, python, COMSOL Multiphysics@, or related experience) is required. If interested please send your curriculum vitae and a cover letter detailing your previous programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>. The position is available immidiately, however the starting date is negotiable (Fall 2022, Spring/Summer/Fall 2023).
+<p>&nbsp;</p>
+<p><strong> PROSPECTIVE MASTER STUDENTS  </strong> </p>
+Looking for a highly motivated student to join our group to pursue his/her/their Master degree in Computational Materials Materials Science and Engineering. This position is available <b> immidiately (Fall 2022) </b>. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, Python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
 
-<p><strong>------------ PROSPECTIVE GRADUATE STUDENTS </strong> </p>
-<p><strong>PhD opening:</strong> Looking for a highly motivated student to join our group to pursue his/her/their PhD degree in Materials Science and Engineering. The research will focus on modeling microwave-triggered controlled fragmentation of conventional thermoplastics into macromolecular chains fragments. Functionalized nanosheets dispersed within the polyolefin materials will localize heating and trigger fragmentation upon application of short microwave pulses. A multiscale model integrating coarse-grained and continuum approaches will be developed. This project will be conducted in close collaboration with the concurrent experiments in Dr. Luzinov’s group. Model parameters will be based on the experimental data, and model predictions will be validated in the experiments. The long-term goal of the project is to design materials with properties of conventional thermoplastics but capable of end-of-life controlled deconstruction into reusable polymer chain fragments. <strong>Requirements:</strong> some prior programming experience (C/C++, python, COMSOL Multiphysics@, or related experience) is required. If interested please send your curriculum vitae and a cover letter detailing your previous programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>. The position is available immidiately, however the starting date is negotiable (Fall 2022,Spring/Summer/Fall 2023).
-<p><strong> ------------ PROSPECTIVE MASTER STUDENTS  </strong> </p>
-Looking for a highly motivated student to join our group to pursue his/her/their Master degree in Computational Materials Materials Science and Engineering. This position is available <b> immidiately (Fall 2022) </b>. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
+<p>&nbsp;</p>
+<p><strong> UNDERGRADUATE STUDENTS  </strong> </p>
+<p><strong>Undergraduate researchers:</strong>    We have several openings for Clemson undergraduate students to participate in research projects involving computational modeling available immidiately. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, Python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
 <br></br>
-<p><strong>------------ UNDERGRADUATE STUDENTS  </strong> </p>
-<p><strong>Undergraduate researchers:</strong>    We have several openings for Clemson undergraduate students to participate in research projects involving computational modeling available immidiately. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
-<br></br>
-Last updated: Sep 5, 2022
+
+<p>&nbsp;</p>
+<p>Last updated: Sep 5, 2022</p>
+
+<p>&nbsp;</p>
 
 
 <!--        <div class="h2">In the Press</div>
