--- a/news.html
+++ b/news.html
@@ -82,14 +82,32 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>September 2022</small></h1></a></strong>
+
+ <p>Congratulations to <strong>Vaibhav Palkar</strong>: images of controlled degradation of hydrogels are now available on <strong> LAMMPS picture gallery: <a href= https://lammps.org/pictures.html#hydrodegrade> https://lammps.org/pictures.html#hydrodegrade </a></strong>
+</strong> 
+<p>______________________________________
+<p>
+
+ <p>Congratulations to <strong>Yao Xiong</strong> and all the coauthors on our recent publication: <strong> Yao Xiong, Chandan K Choudhury, Vaibhav Palkar, Raleigh Wunderlich, Rajendra K Bordia, and Olga Kuksenok <a href= https://www.mdpi.com/2079-4991/12/18/3117> "Mesoscale Modeling of Phase Separation Controlled by Hydrosilylation in Polyhydromethylsiloxane (PHMS)-Containing Blends"</a></strong>, <em> Nanomaterials </em> 12 (18), 3117 (2022) </p>
+</strong> 
+<p>
+
 <h1 class="page-header"><small>August 2022</small></h1></a></strong>
 
  <p>Congratulations to <strong>Vaibhav Palkar</strong>: his code <strong><em>"pair style srp/react"</em> is now included in <a href= https://docs.lammps.org/pair_srp.html#pair-style-srp-react-command> LAMMPS </a></strong>. <br> Vaibhav's name is also listed among the <strong>authors</strong>  who contributed new code or command to <strong>LAMMPS : <a href= https://www.lammps.org/authors.html> https://www.lammps.org/authors.html </a></strong>
 </strong> 
+<strong> 
+<p>
+    _________________________________
+
+<p>Congratulations Dr. Sidong Tu and Dr. Yao Xiong! Wishing you both success in your future endeavors</strong> 
+
+
 <p>
 <h1 class="page-header"><small>June 2022</small></h1></a></strong>
 
- <p>Congratulations to Sidong, Chandan, and Michaela on their recent publication: <strong><p> S Tu, CK Choudhury, M Giltner, I Luzinov, O Kuksenok <a href= https://www.mdpi.com/2073-4360/14/12/2339> "Mesoscale Modeling of Agglomeration of Molecular Bottlebrushes: Focus on Conformations and Clustering Criteria"</a></strong>, <em> Polymers </em> 14 (12), 2339 (2022) </p>
+ <p>Congratulations to Sidong, Chandan, and Michaela on our recent publication: <strong><p> S Tu, CK Choudhury, M Giltner, I Luzinov, O Kuksenok <a href= https://www.mdpi.com/2073-4360/14/12/2339> "Mesoscale Modeling of Agglomeration of Molecular Bottlebrushes: Focus on Conformations and Clustering Criteria"</a></strong>, <em> Polymers </em> 14 (12), 2339 (2022) </p>
 </strong> 
 <p>
 
@@ -297,6 +315,7 @@ Congratulations to Oksana Savchak!<br><br>
 	</footer>
 
 	-->
+<p>Last updated: Sep 22, 2022</p>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
