--- a/pubs.html
+++ b/pubs.html
@@ -82,7 +82,9 @@
                 </h1>
 <!-- Image -->
                 <A href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570><img src="images/jpcb.png" class="illustration"></A>                 
-
+<p> 95.  Yao Xiong, Chandan K Choudhury, Vaibhav Palkar, Raleigh Wunderlich, Rajendra K Bordia, and Olga Kuksenok <strong><a href= https://www.mdpi.com/2079-4991/12/18/3117> "Mesoscale Modeling of Phase Separation Controlled by Hydrosilylation in Polyhydromethylsiloxane (PHMS)-Containing Blends"</a></strong>, <em> Nanomaterials </em> 12 (18), 3117 (2022) </p>
+</strong> 
+<p> 94. Mengxue Zhang, Taylor Larison, Sidong Tu, Olga Kuksenok, and Morgan Stefik <strong> <a href= https://pubs.acs.org/doi/10.1021/acsapm.2c00968> "Effect of Fluorophobic Character upon Switching Nanoparticles in Polymer Films from Aggregated to Dispersed States Using Immersion Annealing"</a></strong>,  <em> ACS Applied Polymer Materials </em> 10.1021/acsapm.2c00968 (2022) </p>
 <p> 94. S. Tu, C.K. Choudhury, M. Giltner, I. Luzinov, O. Kuksenok <strong><a href= https://www.mdpi.com/2073-4360/14/12/2339> "Mesoscale Modeling of Agglomeration of Molecular Bottlebrushes: Focus on Conformations and Clustering Criteria"</a></strong>, <em> Polymers </em> 14 (12), 2339 (2022) </p>
 </strong> 
 <p> 93. V. Palkar, O. Kuksenok <strong> <a href= https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570> "Controlling Degradation and Erosion of Polymer Networks: Insights from Mesoscale Modeling"</a></strong>,  <em> J. Phys. Chem. B </em> 126, 1, 336–346 (2022) </p>
@@ -294,6 +296,8 @@
 <p>2. Kuksenok, O., Sugakov, V.I., and Shiyanovskii, S.V., “Conductivity of liquid crystals with donor and acceptor dopants under irradiation,” Ukrainian Physical Journal, 39 (6), 692-695 (1994).
 </p>
 <p>1. Kuksenok, O., Sugakov, V.I., and Shiyanovskii, S.V., “On the mechanism of negative effect of ionizing irradiation on conductivity of liquid crystals,” Ukrainian Physical Journal, 37 (4), 589-594 (1992).
+
+<p>Last updated: Sep 22, 2022</p>
 
                 </ul>
             </div>
